Change Log
==========

$Id$

1.1
---

- external editor functionality: include title field in data in order to
  make it work correctly with the current version of the client module
- suppress node view reload when node has been modified in management interface
- overwrite also basic attributes via addObject(), e.g. when importing loops data
- allow editing/creation of work items by others (creator, admin),
  take party/userName from previous work item instead of current user
- field order: make sure title and description are always on top
- yellow pages: view task_candidates for selecting persons with required
  knowledge for task
- improve 'move' and 'delegate' actions: create new run, store source and
  target work items, keep state when moving
- keep access trail (history) in session
- work items: provide 'move' action for assigning a work item to
  another task
- show work items (if present) for arbitrary concepts
- portal page with - now fully editable - portal links
- calendar portlet

1.0
---

New features

- delegation of work items basically working
- show "parents" portlet for anonymous, controlled by global option
  ``showParentsForAnonymous``
- use Lighbox view for media asset listings
- new view: ``list_children.html``
- evaluate action settings also on queries
- new action: ``create institution``
- "send email" feature, controlled by global option ``organize.allowSendEmail``
- presence: portlet showing other users logged-in and working within the
  same loops site, controlled by global option ``organize.showPresence`,
  using new LoopsSessionCredentialsPlugin;
  (Changeset 3466; author: Hannes Plattner)
- form for user registration (``register_user.html``), controlled by options:
  ``registration_principalfolder``, ``registration_groups``
- new action: ``create task``
- quick search field
- external file/media asset type: options for hiding or showing fields on editing
- tracking reports: period details